tests/expectations/parser/functions/mode_outside_tuple.out
Error [EPAR0370047]: expected function name
    --> test:2:8
     |
   2 |     fn (a: u8) -> public (u8, u8) {
     |        ^
